crates/zizmor/tests/integration/snapshots/integration__snapshot__undocumented_permissions-6.snap
---
source: crates/zizmor/tests/integration/snapshot.rs
expression: "zizmor().input(input_under_test(\"undocumented-permissions/contents-read-with-other.yml\")).args([\"--persona=pedantic\"]).run()?"
---
error[excessive-permissions]: overly broad permissions
 --> @@INPUT@@:8:3
  |
8 |   issues: write
  |   ^^^^^^^^^^^^^ issues: write is overly broad at the workflow level
  |
  = note: audit confidence → High

help[undocumented-permissions]: permissions without explanatory comments
 --> @@INPUT@@:6:1
  |
6 | / permissions:
7 | |   contents: read
8 | |   issues: write
  | |_______________- help: consider adding comments to document the purpose of each permission
  |
  = note: audit confidence → High

2 findings: 0 unknown, 0 informational, 1 low, 0 medium, 1 high
